criando views para registro de usuario

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,6 +18,8 @@
             <td>{{ form.password.label_tag }}</td>
             <td>{{ form.password }}</td>
         </tr>
+        
+        Don't have an account? <a href="{%url "register"%}"></a>Create your account here!
     </table>
 
     <input type="submit" value="login" />
