--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -3,10 +3,10 @@
 {% block title %}Create an account{% endblock %}
 
 {% block content %}
-<h1>Create an account</h1>
+<h1>Cadastre-se!</h1>
 
 <form action="" method="post">
     {{ form.as_p }}
-    <input type="submit" value="Create the account">
+    <input type="submit" value="Cadastre-se!">
 </form>
 {% endblock %}
