--- a/templates/system/index.html
+++ b/templates/system/index.html
@@ -1,96 +1,71 @@
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <title>Quero.me</title>
-    <link rel="stylesheet" type="text/css" href="../../public/styles/querome.css" media="all">
-  </head>
-  <body data-dispatcher="products#index">
-    <header>
-      <div class="content">
-        <a href="/" class="logo">
-          <img src="../../public/images/system/logo.png" alt="Quero.Me">
-        </a>
-        
-        <div class="user">
-          <img src="https://graph.facebook.com/caiotarifa/picture?size=50x50" alt="Caio Tarifa">
-          <span class="name">Caio Tarifa</span>
-          <ul class="options">
-            <li><a href="/account">Minha conta</a></li>
-            <li><a href="/logout">Desconectar</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
+{% extends "system.html" %}
 
-    <main class="content">
-      
-      <div class="products">
-        <!-- FOR -->
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-        <!-- END FOR -->
-        
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-        
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-        
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-        
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-        
-        <div class="ui product">
-          <span class="notification">3</span>
-          <div class="image">
-            <img src="../../public/images/system/ps.jpg" alt="Product Name">
-            <span class="category">Video-game</span>
-          </div>
-          <h3 class="title">Playstation 4</h3>
-          <span class="price">R$ 4.000,00</span>
-        </div>
-      </div>
+{% block system %}
+<div class="ui items">  
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
 
-    </main>
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
 
-    <footer>
-    </footer>
-  </body>
-</html>
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
+
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
+
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
+
+  <div class="item column-4">
+    <div class="image">
+      <img src="http://placehold.it/300x200">
+    </div>
+    <div class="content">
+      <h3 class="name">Playstation 4</h3>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
+      <span class="meta">3 dias atrás</span>
+    </div>
+  </div>
+</div>
+{% endblock %}
