tentando adicionar o blob, colocando as urls

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,17 @@
 <p>
     {%if request.user.is_authenticated%}
             Olá, {{request.user.first_name}} :)
+            <p>
+                Estes são seus desejos cadastrados:
+                <ul>
+                    {% for w in request.user.wishlist_set.all %}
+                        <li>{{ w.product }} - {{ w.image }}</li>
+                        <a href="{% url wish %}">Cadastre + desejos!</a>
+                    {% empty %}
+                        Não há produtos na sua wishlist. <a href="{% url "wish" %}">Cadastre agora!</a>
+                    {% endfor %}
+                </ul>
+            </p>
             Fazer <a href="{%url logout%}">Logout</a>
     {%else%}
         Olá, faca seu <a href="{%url login%}">Login</a> ou <a href="{%url register%}">Cadastre-se!</a>
