--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Create an account{% endblock %}
+{% block title %}Cadastre-se!{% endblock %}
 
 {% block content %}
 <h1>Cadastre-se!</h1>
