--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     xml:lang="{% firstof LANGUAGE_CODE 'en' %}"
     lang="{% firstof LANGUAGE_CODE 'en' %}">
   <head>
-    <title>{% block title %}{% endblock %} - Nonrel-testapp</title>
+    <title>{% block title %}{% endblock %}</title>
 
     {% block css %}
     {% endblock %}
