--- a/templates/system.html
+++ b/templates/system.html
@@ -17,12 +17,12 @@
 
 <header class="header">
   <div class="page-content">
-    <a href="#" class="logo column-6">
-      <img src="images/logo.png" alt="quero.me">
+    <a href="#" class="logo column-8">
+      <img src="/images/logo.png" alt="quero.me">
     </a>
 
-    <div class="column-5">
-      <a href="#" class="ui button green">Quero</a>
+    <div class="add column-3">
+      <a href="#" class="ui button green"><i class="icon icon-plus"></i>Quero</a>
     </div>
 
     <div class="user column-1">
