usando layout do caio

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "system.html" %}
 
-{% block content %}
+{% block system %}
 
 <p>Preencha o formulário para logar no sistema ;)</p>
 
