--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'system.html' %}
 {% block title %}Page not found{% endblock %}
 
-{% block content %}
-The page you requested could not be found.
+{% block system %}
+Non ecsiste!
 {% endblock %}
