--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'system.html' %}
 {% block title %}Server error{% endblock %}
 
-{% block content %}
-There was an error while handling your request.
+{% block system %}
+Vish! Deu pau :(
 {% endblock %}
