--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "system.html" %}
 
 {% block title %}Cadastre-se!{% endblock %}
 
-{% block content %}
+{% block system %}
 <h1>Cadastre-se!</h1>
 
 <form action="" method="post">
