--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
             Olá, {{request.user.first_name}} :)
             <p>
                 <a href="{% url listar %}">Você tem {{ request.user.wishlist_set.count }} desejos na sua lista.</a>
+                <a href="{% url wish %}">Cadastre + desejos!</a>
             </p>
             Fazer <a href="{%url logout%}">Logout</a>
     {%else%}
