--- a/templates/system/index.html
+++ b/templates/system/index.html
@@ -1,10 +1,12 @@
 {% extends "system.html" %}
 
 {% block system %}
-<div class="ui items">  
+<a href="#" class="ui items">
+
   <div class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
+      <span class="ui ribbon label">Eletrônicos</span>
     </div>
     <div class="content">
       <h3 class="name">Playstation 4</h3>
@@ -16,6 +18,7 @@
   <div class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
+      <span class="ui ribbon label">Eletrônicos</span>
     </div>
     <div class="content">
       <h3 class="name">Playstation 4</h3>
@@ -27,6 +30,7 @@
   <div class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
+      <span class="ui ribbon label">Eletrônicos</span>
     </div>
     <div class="content">
       <h3 class="name">Playstation 4</h3>
@@ -35,37 +39,5 @@
     </div>
   </div>
 
-  <div class="item column-4">
-    <div class="image">
-      <img src="http://placehold.it/300x200">
-    </div>
-    <div class="content">
-      <h3 class="name">Playstation 4</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
-      <span class="meta">3 dias atrás</span>
-    </div>
-  </div>
-
-  <div class="item column-4">
-    <div class="image">
-      <img src="http://placehold.it/300x200">
-    </div>
-    <div class="content">
-      <h3 class="name">Playstation 4</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
-      <span class="meta">3 dias atrás</span>
-    </div>
-  </div>
-
-  <div class="item column-4">
-    <div class="image">
-      <img src="http://placehold.it/300x200">
-    </div>
-    <div class="content">
-      <h3 class="name">Playstation 4</h3>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
-      <span class="meta">3 dias atrás</span>
-    </div>
-  </div>
-</div>
+</a>
 {% endblock %}
