--- a/templates/system.html
+++ b/templates/system.html
@@ -17,12 +17,14 @@
 
 <header class="header">
   <div class="page-content">
-    <a href="#" class="logo column-8">
-      <img src="/images/logo.png" alt="quero.me">
-    </a>
+    <div class="column-9">
+      <a href="#" class="logo">
+        <img src="/images/logo.png" alt="quero.me">
+      </a>
+    </div>
 
-    <div class="add column-3">
-      <a href="#" class="ui button green"><i class="icon icon-plus"></i>Quero</a>
+    <div class="add column-2">
+      <a href="#" class="ui button green"><i class="icon icon-plus"></i> Quero</a>
     </div>
 
     <div class="user column-1">
@@ -39,8 +41,8 @@
 </main>
   
 <footer class="footer">
-  <div class="pagecontent">
-    Esse é o rodapé, tá ligado?
+  <div class="page-content">
+    Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
   </div>
 </footer>
 
