arrumando links dos itens

--- a/templates/system/index.html
+++ b/templates/system/index.html
@@ -1,9 +1,9 @@
 {% extends "system.html" %}
 
 {% block system %}
-<a href="#" class="ui items">
+<div class="ui items">
 
-  <div class="item column-4">
+  <a href="#" class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
       <span class="ui ribbon label">Eletrônicos</span>
@@ -13,9 +13,9 @@
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
       <span class="meta">3 dias atrás</span>
     </div>
-  </div>
+  </a>
 
-  <div class="item column-4">
+  <a href="#" class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
       <span class="ui ribbon label">Eletrônicos</span>
@@ -25,9 +25,9 @@
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
       <span class="meta">3 dias atrás</span>
     </div>
-  </div>
+  </a>
 
-  <div class="item column-4">
+  <a href="#" class="item column-4">
     <div class="image">
       <img src="http://placehold.it/300x200">
       <span class="ui ribbon label">Eletrônicos</span>
@@ -37,7 +37,7 @@
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis mi in ligula blandit mollis.</p>
       <span class="meta">3 dias atrás</span>
     </div>
-  </div>
+  </a>
 
 </a>
 {% endblock %}
