--- a/templates/system/show.html
+++ b/templates/system/show.html
@@ -1,5 +1,20 @@
 {% extends "system.html" %}
 
 {% block system %}
-Teste
+<aside role="sidebar">
+  <img src="http://placehold.it/300x200" alt="NOME">
+  
+  <dl>
+    <dt>Categoria</dt>
+    <dd>Eletrônicos</dd>
+    
+    <dt>Valor Desejado</dt>
+    <dd>R$ 2.000,00</dd>
+  </dl>
+</aside>
+
+<div class="content">
+  <h1>Teste</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus adipiscing vulputate urna ut lacinia. Phasellus viverra bibendum felis non aliquet. In molestie sodales sagittis. Suspendisse pulvinar aliquam tempus. Praesent mi sem, tristique sed interdum eu, accumsan et augue. Vivamus eleifend, metus non pellentesque bibendum, augue elit elementum quam, at pellentesque diam nibh cursus dui.</p>
+</div>
 {% endblock %}
