--- a/templates/system.html
+++ b/templates/system.html
@@ -13,7 +13,7 @@
   <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 
-<body>
+<body data-page="{{controller}}#{{method}}">
 
 <header class="header">
   <div class="page-content">
