--- a/templates/system.html
+++ b/templates/system.html
@@ -25,7 +25,7 @@
 
   {%if request.user.is_authenticated%}
     <div class="add column-2">
-      <a href="#" class="ui button green"><i class="icon icon-plus"></i> Quero</a>
+      <a href="{% url wish %}" class="ui button green"><i class="icon icon-plus"></i> Quero</a>
     </div>
 
     <div class="user column-1">
