--- a/assets/styles/sass/ui/items.scss
+++ b/assets/styles/sass/ui/items.scss
@@ -26,7 +26,8 @@
     }
 
     &:hover {
-      box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+      text-decoration: none;
       @include transform(scale(1.05));
       &, &:before, &:after {
         border-color: rgba(0, 0, 0, 0.2);
