--- a/assets/styles/querome-system.css
+++ b/assets/styles/querome-system.css
@@ -1951,6 +1951,7 @@ table {
     bottom: 0; }
   .ui.items .item:hover {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
     -webkit-transform: scale(1.05);
     -moz-transform: scale(1.05);
     -ms-transform: scale(1.05);
