--- a/templates/system/index.html
+++ b/templates/system/index.html
@@ -1,6 +1,26 @@
 {% extends "system.html" %}
 
 {% block system %}
+<div class="ui alert">
+  Essa é uma mensagem.
+  <a href="#" class="close"><i class="icon icon-times-circle"></i></a>
+</div>
+
+<div class="ui alert danger">
+  Essa é uma mensagem.
+  <a href="#" class="close"><i class="icon icon-times-circle"></i></a>
+</div>
+
+<div class="ui alert success">
+  Essa é uma mensagem.
+  <a href="#" class="close"><i class="icon icon-times-circle"></i></a>
+</div>
+
+<div class="ui alert warning">
+  Essa é uma mensagem.
+  <a href="#" class="close"><i class="icon icon-times-circle"></i></a>
+</div>
+
 <div class="ui items">
 
   <a href="#" class="item column-4">
