--- a/templates/website.html
+++ b/templates/website.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>quero.me | minha lista</title>
-  <link rel="stylesheet" href="styles/querome.css">
+  <link rel="stylesheet" href="/styles/querome.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic">
 </head>
 
@@ -16,18 +16,25 @@
 
 <header class="header">
   <div class="page-content">
-    Header
+    <a href="#" class="logo column-6">
+      <img src="/images/logo.png" alt="quero.me">
+    </a>
+
+    <div class="column-6">
+      <a href="#" class="ui button green" style="float:right;margin-top:25px;"><i class="icon icon-asterisk"></i> Comece Agora</a>
+    </div>
+
   </div>
 </header>
 
-<main class="page-content">
+<main class="home">
 {% block website %}
 {% endblock %}
 </main>
 
 <footer class="footer">
   <div class="page-content">
-    Footer
+    Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
   </div>
 </footer>
 
