--- a/assets/styles/sass/querome.scss
+++ b/assets/styles/sass/querome.scss
@@ -5,6 +5,13 @@
 /* Core */
 @import 'core/reset';
 @import 'core/grid';
+@import 'core/icons';
+
+/* UI */
+@import 'ui/button';
+@import 'ui/footer';
+@import 'ui/header';
+@import 'ui/label';
 
 /* Layouts */
 @import 'layouts/website';
