página wishes/show

--- a/assets/styles/sass/querome-system.scss
+++ b/assets/styles/sass/querome-system.scss
@@ -14,6 +14,10 @@
 @import 'ui/header';
 @import 'ui/items';
 @import 'ui/label';
+@import 'ui/table';
 
 /* Layouts */
 @import 'layouts/system';
+
+/* Sections */
+@import 'sections/system/wishes';
