--- a/assets/styles/querome-system.css
+++ b/assets/styles/querome-system.css
@@ -2076,6 +2076,48 @@ table {
       top: 100%;
       width: 0; }
 
+.ui.table {
+  border: 1px solid #cccccc;
+  border-collapse: separate;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05); }
+  .ui.table tr:last-child td:first-child {
+    border-radius: 0 0 0 4px; }
+  .ui.table tr:last-child td:last-child {
+    border-radius: 0 0 4px 0; }
+  .ui.table th, .ui.table td {
+    padding: 12px 15px;
+    text-align: left;
+    vertical-align: top; }
+    .ui.table th:last-child, .ui.table td:last-child {
+      border-right: none; }
+  .ui.table thead th {
+    background-image: -webkit-linear-gradient(top, whitesmoke, #e5e5e5);
+    background-image: linear-gradient(to bottom, whitesmoke, #e5e5e5);
+    border: 1px solid #cccccc;
+    border-width: 0 1px 1px 0;
+    box-shadow: inset 0 1px 0 #ffffff;
+    vertical-align: bottom; }
+    .ui.table thead th:first-child {
+      border-radius: 4px 0 0 0; }
+    .ui.table thead th:last-child {
+      border-radius: 0 4px 0 0; }
+    .ui.table thead th:only-child {
+      border-radius: 4px 4px 0 0; }
+  .ui.table tbody td {
+    background: #ffffff;
+    border: 1px solid #dddddd;
+    border-width: 0 1px 1px 0;
+    -webkit-transition: background 250ms;
+    -moz-transition: background 250ms;
+    transition: background 250ms; }
+  .ui.table tbody tr:hover td {
+    background: #f5f5f5 !important; }
+  .ui.table tbody tr:last-child td {
+    border-bottom: none; }
+  .ui.table tbody tr:nth-child(even) td {
+    background: #fafafa; }
+
 /* Layouts */
 body {
   background: url("../images/background.png");
@@ -2120,3 +2162,86 @@ a {
 main {
   flex: 1;
   padding: 30px 0 50px !important; }
+
+/* Sections */
+[data-page="wishes#show"] .sidebar .image {
+  position: relative; }
+  [data-page="wishes#show"] .sidebar .image:before {
+    background: url("/images/system/tape.png");
+    content: '';
+    height: 26px;
+    left: 100px;
+    opacity: 0.75;
+    position: absolute;
+    top: -15px;
+    width: 99px; }
+  [data-page="wishes#show"] .sidebar .image img {
+    border-radius: 2px;
+    display: block;
+    width: 100%; }
+[data-page="wishes#show"] .sidebar .actions {
+  margin-top: 20px;
+  text-align: center; }
+  [data-page="wishes#show"] .sidebar .actions .button {
+    margin: 0 5px; }
+[data-page="wishes#show"] .content {
+  background: #fff;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.15);
+  position: relative; }
+  [data-page="wishes#show"] .content:before, [data-page="wishes#show"] .content:after {
+    background: #fff;
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+    content: '';
+    display: block;
+    height: 100%;
+    left: -1px;
+    position: absolute;
+    top: 0;
+    width: 100%; }
+  [data-page="wishes#show"] .content:before {
+    -webkit-transform: rotate(1.2deg);
+    -moz-transform: rotate(1.2deg);
+    -ms-transform: rotate(1.2deg);
+    -o-transform: rotate(1.2deg);
+    transform: rotate(1.2deg);
+    z-index: -1; }
+  [data-page="wishes#show"] .content:after {
+    -webkit-transform: rotate(-1.2deg);
+    -moz-transform: rotate(-1.2deg);
+    -ms-transform: rotate(-1.2deg);
+    -o-transform: rotate(-1.2deg);
+    transform: rotate(-1.2deg);
+    z-index: -1; }
+  [data-page="wishes#show"] .content .name {
+    border-bottom: 1px dotted #ddd;
+    font-weight: 100;
+    margin: 0 0 10px;
+    padding: 0 0 10px; }
+  [data-page="wishes#show"] .content .description {
+    color: rgba(0, 0, 0, 0.75);
+    font-size: 130%; }
+  [data-page="wishes#show"] .content .subtitle {
+    text-align: center; }
+  [data-page="wishes#show"] .content h2 {
+    color: #999;
+    display: inline-block;
+    font-size: 120%;
+    text-transform: uppercase;
+    position: relative; }
+    [data-page="wishes#show"] .content h2:before, [data-page="wishes#show"] .content h2:after {
+      content: '';
+      display: block;
+      height: 1px;
+      position: absolute;
+      top: 50%;
+      width: 100px; }
+    [data-page="wishes#show"] .content h2:before {
+      background-image: -webkit-linear-gradient(left, transparent, #dddddd);
+      background-image: linear-gradient(to right, transparent, #dddddd);
+      left: -105px; }
+    [data-page="wishes#show"] .content h2:after {
+      background-image: -webkit-linear-gradient(right, transparent, #dddddd);
+      background-image: linear-gradient(to left, transparent, #dddddd);
+      right: -105px; }
+  [data-page="wishes#show"] .content table {
+    width: 100%; }
