--- a/templates/system.html
+++ b/templates/system.html
@@ -10,6 +10,7 @@
   <title>quero.me | minha lista</title>
   <link rel="stylesheet" href="/styles/querome-system.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body data-page="{{controller}}#{{method}}">
@@ -17,12 +18,12 @@
 <header class="header">
   <div class="page-content">
     <div class="column-9">
-      <a href="{% url home %}" class="logo">
+      <a href="{% url listar %}" class="logo">
         <img src="/images/logo.png" alt="quero.me">
       </a>
     </div>
 
-  {%if request.user.is_authenticated%}
+  {% if request.user.is_authenticated %}
     <div class="add column-2">
       <a href="{% url wish %}" class="ui button green"><i class="icon icon-plus"></i> Quero</a>
     </div>
@@ -30,16 +31,13 @@
     <div class="user column-1">
         <img src="http://graph.facebook.com/caiotarifa/picture?size=64x64" alt="Caio Tarifa">
     </div>
-  </div>
-
   {% endif %}
+  </div>
 </header>
 
 <main class="page-content">
-
 {% block system %}
 {% endblock %}
-
 </main>
   
 <footer class="footer">
