Alterações no topo da home

--- a/templates/website.html
+++ b/templates/website.html
@@ -21,7 +21,15 @@
     </a>
 
     <div class="column-6">
-      <a href="#" class="ui button green" style="float:right;margin-top:25px;"><i class="icon icon-asterisk"></i> Comece Agora</a>
+      <form name="input" action="" method="get">
+        <input type="email" name="email" value="E-mail" size="20">
+        <input type="password" name="pass" value="Senha" size="20">
+        <input type="button" class="ui button green" value="ok">
+      </form>
+      <a href="#"><i class="icon icon-asterisk"></i> cadastre-se agora</a>
+      
+        
+      </a>
     </div>
 
   </div>
