mucança do botao do topo

--- a/templates/website.html
+++ b/templates/website.html
@@ -17,19 +17,12 @@
 <header class="header">
   <div class="page-content">
     <a href="#" class="logo column-6">
-      <img src="/images/logo.png" alt="quero.me">
+      <img src="/images/logo.png" alt="Logo Quero.me">
     </a>
-
-    <div class="column-6">
-      <form name="input" action="" method="get">
-        <input type="email" name="email" value="E-mail" size="20">
-        <input type="password" name="pass" value="Senha" size="20">
-        <input type="button" class="ui button green" value="ok">
-      </form>
-      <a href="#"><i class="icon icon-asterisk"></i> cadastre-se agora</a>
-      
-        
-      </a>
+    
+    <div class="column-6 combo-btn">
+        <a href="#" class="ui button"><i class="icon icon-hand-o-right"></i> Cadastre-se</a>
+        <a href="#" class="ui button green"><i class="icon icon-lock"></i> Entrar</a>
     </div>
 
   </div>
@@ -42,7 +35,7 @@
 
 <footer class="footer">
   <div class="page-content">
-    Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
+    <p>Feito com <i class="icon icon-heart"></i> no Google Developer Bus.</p>
   </div>
 </footer>
 
