--- a/assets/styles/sass/layouts/website.scss
+++ b/assets/styles/sass/layouts/website.scss
@@ -22,7 +22,7 @@ a {
 
   @include clearfix;
 }
-
+g
 main {
   flex: 1;
   padding: 30px 0 50px !important;
@@ -31,6 +31,10 @@ main {
 main.home {
   padding:0 !important;
 }
+.combo-btn {
+  margin-top:40px;text-align:right;
+}
+
 .banner-home {
 width: 100%;
 height:340px;
