--- a/assets/styles/sass/layouts/website.scss
+++ b/assets/styles/sass/layouts/website.scss
@@ -31,9 +31,7 @@ main {
 main.home {
   padding:0 !important;
 }
-.combo-btn {
-  margin-top:40px;text-align:right;
-}
+
 
 .banner-home {
 width: 100%;
@@ -126,6 +124,10 @@ box-shadow: 211px 0 232px #5f5b79 inset;
     text-align: center;
     padding-bottom:40px;
   }
+}
+.combo-btn {
+  margin-top:40px;
+  text-align:right;
 }
 
 
