--- a/templates/system.html
+++ b/templates/system.html
@@ -42,10 +42,19 @@
   
 <footer class="footer">
   <div class="page-content">
-    Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
+    <div class="column-7">
+      Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
+    </div>
+    <div class="column-5">
+      <div class="g-page" data-width="300" data-href="https://plus.google.com/102147617722859399678" data-layout="landscape" data-rel="publisher"></div>
+    </div>
   </div>
 </footer>
 
+<script type="text/javascript" src="https://apis.google.com/js/platform.js">
+  {lang: 'pt-BR'}
+</script>
 <script src="scripts/querome.js"></script>
+
 </body>
 </html>
