--- a/assets/styles/sass/ui/footer.scss
+++ b/assets/styles/sass/ui/footer.scss
@@ -1,5 +1,9 @@
 .footer {
   background: #fdba33;
-  box-shadow: -1px 0 5px rgba(0, 0, 0, 0.15);
-  padding: 25px 0;
+  box-shadow: inset 1px 0 5px rgba(0, 0, 0, 0.15);
+  padding: 0;
+
+  .page-content {
+    padding: 0;
+  }
 }
