colocando campos hidden pra saber qual tipo de form foi enviado

--- a/templates/system/users/index.html
+++ b/templates/system/users/index.html
@@ -11,7 +11,7 @@
 
   <div class="ui divider horizontal">Ou</div>
 
-  <form class="ui form">
+  <form action="" method="POST" class="ui form">
     <p>Entre com os seus dados:</p>
     
     <div class="field">
@@ -30,6 +30,7 @@
       </div>
     </div>
 
+      <input type="hidden" name="tipo_form" value="login">
     <div class="actions">
       <button type="submit" class="ui button green">Entrar</button>
     </div>
@@ -39,7 +40,7 @@
 <section class="register column-6">
   <h2>Cadastre-se</h2>
 
-  <form class="ui form">
+  <form action="" method="POST" class="ui form">
     <p>Faça parte da maior rede... parte da maior rede parte da maior rede parte da maior rede parte da maior rede parte da maior rede...</p>
 
     <div class="field half">
@@ -67,6 +68,7 @@
       <input type="password" required>
     </div>
 
+      <input type="hidden" name="tipo_form" value="register">
     <div class="actions">
       <button type="submit" class="ui button green">Quero me cadastrar!</button>
     </div>
