--- a/assets/styles/sass/sections/system/wishes.scss
+++ b/assets/styles/sass/sections/system/wishes.scss
@@ -1,3 +1,10 @@
+[data-page="wishes#index"] {
+  .no-products {
+    margin-top: 25px;
+    text-align: center;
+  }
+}
+
 [data-page="wishes#show"] {
 
   .sidebar {
