--- a/assets/styles/sass/layouts/system.scss
+++ b/assets/styles/sass/layouts/system.scss
@@ -40,10 +40,12 @@ a {
   }
 
   .user {
-    margin-top: 30px;
+    margin-top: 32px;
     img {
       border-radius: 100%;
       display: block;
+      height: 50px;
+      width: 50px;
     }
   }
 }
