--- a/assets/styles/sass/ui/label.scss
+++ b/assets/styles/sass/ui/label.scss
@@ -6,6 +6,19 @@
   text-transform: uppercase;
   vertical-align: middle;
 
+  &.floating {
+    background: #d95c5c;
+    border-radius: 2px;
+    color: #fff;
+    font-weight: bold;
+    left: 99%;
+    margin: 0em 0em 0em -15px !important;
+    padding: 4px 8px;
+    position: absolute;
+    top: -10px;
+    z-index: 100;
+  }
+
   &.ribbon {
     border-radius: 0 2px 2px 0;
     color: #fff;
