--- a/templates/system.html
+++ b/templates/system.html
@@ -55,7 +55,8 @@
 <script type="text/javascript" src="https://apis.google.com/js/platform.js">
   {lang: 'pt-BR'}
 </script>
-<script src="scripts/querome.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="/scripts/querome-system.js"></script>
 
 </body>
 </html>
