--- a/templates/system/users/index.html
+++ b/templates/system/users/index.html
@@ -18,7 +18,7 @@
       <label>E-mail</label>
       <div class="input prepend">
         <div class="prepend"><i class="icon icon-envelope"></i></div>
-        <input type="email" placeholder="email@example.com" required autofocus>
+        <input id="id_username"  name="username_login" type="email" placeholder="email@example.com" required autofocus>
       </div>
     </div>
 
@@ -26,7 +26,7 @@
       <label>Senha</label>
       <div class="input prepend">
         <div class="prepend"><i class="icon icon-lock"></i></div>
-        <input type="password" placeholder="*******" required>
+        <input id="id_password"  name="password_login" type="password" placeholder="*******" required>
       </div>
     </div>
 
@@ -45,27 +45,27 @@
 
     <div class="field half">
       <label>Nome</label>
-      <input type="text" required>
+      <input id="id_first_name"  name="first_name" type="text" required>
     </div>
   
     <div class="field half">
       <label>Sobrenome</label>
-      <input type="text" required>
+      <input id="id_last_name"  name="last_name" type="text" required>
     </div>
   
     <div class="field">
       <label>E-mail</label>
-      <input type="email" required>
+      <input id="id_email_"  name="email" type="email" required>
     </div>
   
     <div class="field half">
       <label>Senha</label>
-      <input type="password" required>
+      <input id="id_password_"  name="password" type="password" required>
     </div>
   
     <div class="field half">
       <label>Confirme sua senha</label>
-      <input type="password" required>
+      <input id="id_password_confirmation"  name="password_confirmation" type="password" required>
     </div>
 
       <input type="hidden" name="tipo_form" value="register">
