--- a/assets/styles/sass/querome-system.scss
+++ b/assets/styles/sass/querome-system.scss
@@ -11,6 +11,7 @@
 @import 'ui/alert';
 @import 'ui/button';
 @import 'ui/divider';
+@import 'ui/dropdown';
 @import 'ui/footer';
 @import 'ui/form';
 @import 'ui/header';
