--- a/assets/styles/sass/sections/system/wishes.scss
+++ b/assets/styles/sass/sections/system/wishes.scss
@@ -1,4 +1,8 @@
 [data-page="wishes#index"] {
+  .ui.item {
+    height: 340px;
+  }
+
   .no-products {
     margin-top: 25px;
     text-align: center;
