--- a/assets/styles/sass/ui/dropdown.scss
+++ b/assets/styles/sass/ui/dropdown.scss
@@ -9,7 +9,7 @@
 
   .menu {
     background-color: #fff;
-    border-radius: $radius;
+    border-radius: 4px;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
     cursor: auto;
     display: none;
