arrumando links da página inicial

--- a/templates/website.html
+++ b/templates/website.html
@@ -21,8 +21,8 @@
     </a>
     
     <div class="column-6 combo-btn">
-        <a href="#" class="ui button"><i class="icon icon-hand-o-right"></i> Cadastre-se</a>
-        <a href="#" class="ui button green"><i class="icon icon-lock"></i> Entrar</a>
+        <a href="{% url register %}" class="ui button"><i class="icon icon-hand-o-right"></i> Cadastre-se</a>
+        <a href="{% url register %}" class="ui button green"><i class="icon icon-lock"></i> Entrar</a>
     </div>
 
   </div>
